[package]
name = "coco-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "coco"
path = "src/main.rs"

[dependencies]
coco-types.workspace = true
coco-llm-types.workspace = true
coco-error.workspace = true
coco-bridge.workspace = true
coco-sandbox.workspace = true
coco-commands.workspace = true
coco-config.workspace = true
coco-config-reload.workspace = true
coco-hooks.workspace = true
coco-session.workspace = true
coco-inference.workspace = true
coco-provider-auth.workspace = true
coco-compact.workspace = true
coco-memory.workspace = true
coco-shell.workspace = true
coco-tool-runtime.workspace = true
coco-tools.workspace = true
coco-query.workspace = true
coco-system-reminder.workspace = true
coco-messages.workspace = true
coco-context.workspace = true
coco-mcp.workspace = true
coco-mcp-skills.workspace = true
coco-lsp.workspace = true
coco-permissions.workspace = true
coco-plugins.workspace = true
coco-skills.workspace = true
coco-output-styles.workspace = true
coco-coordinator.workspace = true
coco-tasks.workspace = true
coco-state.workspace = true
coco-git.workspace = true
coco-paths.workspace = true
coco-subagent.workspace = true
coco-tui.workspace = true
coco-keybindings = { workspace = true, features = ["loader"] }
coco-otel.workspace = true
coco-model-card.workspace = true
coco-file-watch.workspace = true
uuid = { workspace = true, features = ["v4"] }
base64.workspace = true
libc.workspace = true

dirs.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
tracing.workspace = true
shlex.workspace = true

[dev-dependencies]
coco-frontmatter.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
