[package]
name = "coco-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-config.workspace = true
coco-inference.workspace = true
coco-tool-runtime.workspace = true
coco-tools.workspace = true
coco-messages.workspace = true
coco-context.workspace = true
coco-compact.workspace = true
coco-hooks.workspace = true
coco-otel.workspace = true
coco-permissions.workspace = true
coco-skills.workspace = true
coco-system-reminder.workspace = true
coco-lsp.workspace = true
coco-mcp.workspace = true
vercel-ai-provider.workspace = true
chrono.workspace = true
lru.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
coco-tools.workspace = true
coco-tool-runtime = { workspace = true, features = ["testing"] }
coco-session.workspace = true
coco-hooks.workspace = true
tempfile.workspace = true
async-trait.workspace = true
