[package]
name = "coco-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-config.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
