[package]
name = "coco-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-config.workspace = true
coco-tool.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync", "process", "time"] }
uuid = { workspace = true, features = ["v4"] }
dirs.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true
