[package]
name = "coco-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
testing = []

[dependencies]
coco-config.workspace = true
coco-messages.workspace = true
coco-types.workspace = true
coco-context.workspace = true
coco-file-search.workspace = true
coco-file-watch.workspace = true
coco-git.workspace = true
coco-keybindings = { workspace = true, features = ["crossterm", "loader"] }
coco-subagent.workspace = true
dirs.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
tokio = { workspace = true, features = ["sync", "macros", "time", "process"] }
tokio-stream.workspace = true
rust-i18n.workspace = true
nucleo.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "v5"] }
unicode-width.workspace = true
unicode-segmentation.workspace = true
# Clipboard (copy_to_clipboard + OSC 52 + arboard + WSL PowerShell fallback).
# Unavailable on Android; see clipboard_copy.rs for the cfg gating.
base64.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
insta.workspace = true
pretty_assertions.workspace = true
vt100.workspace = true
