[package]
name = "coco-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
coco-types.workspace = true
coco-utils-common.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
dirs.workspace = true
strum.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
